--- a/src/partials/fontlist.html
+++ b/src/partials/fontlist.html
@@ -1,4 +1,10 @@
 <div class="jdfs-fontlistcon" ng-class="{'jdfs-active': isActive()}">
+  <ul class="jdfs-fontlist font-selector-list">
+    <jd-fontlist-entry class="font-selector-item" current="current" entry="entry"
+    ng-repeat="entry in getFontlistEntries() | limitTo:50 track by $index"></jd-fontlist-entry>
+	</ul>
+</div>
+<!-- <div class="jdfs-fontlistcon" ng-class="{'jdfs-active': isActive()}">
 		<button
 			class="jdfs-fontpagination jdfs-fontpagination-prev"
 			ng-click="paginate('prev', $event)"
@@ -16,5 +22,4 @@
 				ng-disabled="!paginationButtonActive('next')"
 			>{{text.page.next}}
 		</button>
-
-</div>
+</div> -->
